--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -64,3 +64,20 @@ jobs:
         name: html-report--attempt-${{ github.run_attempt }}
         path: playwright-report
         retention-days: 14
+  lint-fix:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install deps
+        run: npm ci
+      - name: Run ESLint Fix
+        run: npx eslint . --fix
+      - name: Commit changes
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "chore: auto-fix lint issues" || echo "No changes to commit"
+          git push
