--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,6 @@
 name: Playwright Tests
+permissions:
+  contents: write
 on:
   push:
     branches: [ main, master ]
@@ -80,4 +82,4 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           git commit -m "chore: auto-fix lint issues" || echo "No changes to commit"
-          git push
+          git push origin HEAD:${{ github.head_ref }}
