--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -82,4 +82,5 @@ jobs:
           git config user.email github-actions@github.com
           git add .
           git commit -m "chore: auto-fix lint issues" || echo "No changes to commit"
+          git pull --rebase origin ${{ github.head_ref }}
           git push origin HEAD:${{ github.head_ref }}
