--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -27,25 +27,6 @@ jobs:
       - name: Install deps
         run: npm ci
 
-      - name: Build app
-        run: npm run build
-
-  test_unit:
-    name: Unit Tests
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: npm
-      - name: Install deps
-        run: npm ci
-      - name: Run Vitest
-        run: npx vitest run --reporter=verbose
-
   test_integration:
     name: Integration Tests (Playwright)
     runs-on: ubuntu-latest
@@ -65,28 +46,16 @@ jobs:
           if: ${{ !cancelled() }}
           with:
             name: Integration Tests (Playwright)
-            path: reports-e2e/html/
+            path: playwright-reports/index.html
             if-no-files-found: error
-
-  deploy:
-    name: Deploy (mock)
-    runs-on: ubuntu-latest
-    needs: [test_unit, test_integration]
-    container:
-      image: alpine:latest
-    steps:
-      - name: Mock deployment
-        run: echo 'Mock deployment was successful!'
 
   e2e:
     name: E2E (Playwright)
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: test_integration
     container:
       image: mcr.microsoft.com/playwright:v1.54.2-jammy
       options: --user 1001
-    env:
-      E2E_BASE_URL: https://spanish-cards.netlify.app/
     steps:
       - uses: actions/checkout@v4
       - name: Install deps
