--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -14,7 +14,7 @@ concurrency:
 jobs:
   build:
     name: Build
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -30,7 +30,7 @@ jobs:
 
   test_integration:
     name: Integration Tests (Playwright)
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     needs: build
     steps:
         - uses: actions/checkout@v4
@@ -52,7 +52,7 @@ jobs:
 
   e2e:
     name: E2E (Playwright)
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/playwright:v1.52.0-jammy
       options: --user 1001
